--- a/style.css
+++ b/style.css
@@ -1,93 +1,113 @@
 header
-{
+  {
   text-align: right;
-  margin-top: 1.5em;
-}
+  margin-bottom: 3em;
+  margin-right: 1em;
+  }
+
+
 header a:link
-{
+  {
   color: grey;
   text-decoration: none;
-}
+  margin: 0.4em;
+  }
 
+header a:visited
+  {
+  color: grey;
+  }
+
+.material-icons:hover
+  {
+  color:black;
+  }
 
 section img
-{
+  {
   display: block;
   margin-top: 10em;
   margin-left: auto;
   margin-right: auto;
-}
+  }
 
 .signin
-{
-  border: 2px solid blue;
-  background-color: rgb(0, 0, 255);
+  {
+  border: 2px solid rgb(67, 134, 250);
+  background-color: rgb(67, 134, 250);
   color: white;
   text-decoration: none;
-  font-weight: bold;
-  padding-bottom: 1em;
-  padding: 4px;
-}
+  font-family: fantasy;
+  padding: 3.5px;
+  padding-left: 9px;
+  padding-right: 9px;
+  }
 
-
+.signin:visited
+  {
+  color:white;
+  }
 
 section input
-{
+  {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  padding : 0.5em 25em 0.5em 0em;
+  padding : 1em 25em 0.5em 0em;
   border: 1px solid grey;
   border-radius: 1px;
   box-shadow: 3px 3px 2px silver;
   text-align: left;
-}
+  }
 
 section a
-{
-  border: 2px solid rgb(224, 224, 224);
+  {
+  border: 2px solid rgb(243, 243, 243);
   display: inline;
   text-align: center;
-  color: rgb(96, 96, 96);
+  color: rgb(125, 145, 145);
   margin: auto;
   padding: 0.5em 0.5em 0.5em 0.5em;
-  background-color: rgb(224, 224, 224);
-}
+  background-color: rgb(243, 243, 243);
+  text-decoration: none;
+  }
 
 div
-
-{
+  {
   width: 26%;
   margin: auto;
   margin-top: 2em;
-}
+  }
+
 p
-{
+  {
   text-align: center;
-}
+  padding-top: 1em;
+  padding-right: 2em;
+  }
+
 section a:hover
-{
+  {
   border: 2px outset rgb(224, 224, 224);
   color: black;
   font-weight: bold;
-}
+  }
 
 footer
-{
-
-  border: 2px solid rgb(224, 224, 224);
-  background-color: rgb(224, 224, 224);
+  {
+  border: 2px solid rgb(242, 242, 242);
+  background-color: rgb(242, 242, 242);
   margin-top: 14em;
+  color: rgb(102, 102, 102);
+  }
 
-
-}
 footer a:link
-{
+  {
   text-decoration: none;
-    color: rgb(128, 128, 128);
-}
+  color: rgb(128,128,128);
+  }
 
 aside
-{
+  {
   float: right;
-}
+  }
