--- a/style.css
+++ b/style.css
@@ -3,19 +3,19 @@ header
   text-align: right;
   margin-bottom: 3em;
   margin-right: 1em;
+  color:black;
   }
 
 
 header a:link
   {
-  color: grey;
   text-decoration: none;
   margin: 0.4em;
   }
 
 header a:visited
   {
-  color: grey;
+  color: black;
   }
 
   .gmail .images
@@ -46,6 +46,19 @@ section img
   margin-right: auto;
   }
 
+section h2
+  {
+  margin: auto;
+  display: block;
+  text-align: center;
+  font-weight: normal;
+  font-size: 14px;
+  padding-right: 36px;
+  border: 2px solid white;
+  background-color: white;
+  }
+
+/* sign in button on the top right*/
 .signin
   {
   border: 2px solid rgb(67, 134, 250);
@@ -57,6 +70,7 @@ section img
   padding-left: 9px;
   padding-right: 9px;
   }
+
 /* attribute:visited plays when the button has been clicked"*/
 .signin:visited
   {
@@ -75,15 +89,15 @@ section input
   text-align: left;
   }
 
-section a
+.lucky, .googlesearch
   {
   border: 2px solid rgb(243, 243, 243);
+  background-color: rgb(243, 243, 243);
   display: inline;
   text-align: center;
   color: rgb(125, 145, 145);
   margin: auto;
   padding: 0.5em 0.5em 0.5em 0.5em;
-  background-color: rgb(243, 243, 243);
   text-decoration: none;
   }
 
@@ -93,14 +107,9 @@ div
   width: 26%;
   margin: auto;
   margin-top: 2em;
+  margin-bottom: 2em;
   }
 
-p
-  {
-  text-align: center;
-  padding-top: 1em;
-  padding-right: 2em;
-  }
 
 section a:hover
   {
