--- a/style.css
+++ b/style.css
@@ -18,17 +18,17 @@ header a:visited
   color: black;
   }
 
-  .gmail .images
+.gmail .images
   {
   text-decoration: none;
   }
 
-  .gmail:hover
+.gmail:hover
   {
   text-decoration: underline;
   }
 
-  .images:hover
+.images:hover
   {
   text-decoration: underline;
   }
@@ -93,16 +93,28 @@ section input
   {
   border: 2px solid rgb(243, 243, 243);
   background-color: rgb(243, 243, 243);
-  display: inline;
+  font-size: 13px;
+  display: inline-block;
   text-align: center;
   color: rgb(125, 145, 145);
-  margin: auto;
+  margin-left: 5%;
   padding: 0.5em 0.5em 0.5em 0.5em;
   text-decoration: none;
   }
 
-div
+  .lucky:hover
+  {
+  border: 0px solid rgb(224, 224, 224);
+  color: black;
+  }
 
+  .googlesearch:hover
+  {
+  border: 0px solid rgb(224, 224, 224);
+  color: black;
+  }
+
+div
   {
   width: 26%;
   margin: auto;
@@ -111,25 +123,20 @@ div
   }
 
 
-section a:hover
-  {
-  border: 2px outset rgb(224, 224, 224);
-  color: black;
-  font-weight: bold;
-  }
-
 footer
   {
   border: 2px solid rgb(242, 242, 242);
   background-color: rgb(242, 242, 242);
   margin-top: 14em;
-  color: rgb(102, 102, 102);
+  color: black;
+  font-size: 15px;
   }
 
 footer a:link
   {
   text-decoration: none;
-  color: rgb(128,128,128);
+  color: black;
+
   }
 
 aside
